completely revamped approach to the dynamic VNT object building